force-app/main/default/objects/Opportunity_Competitor_Product__c/Opportunity_Competitor_Product__c.object-meta.xml
<CustomObject>
    <label>Opportunity Competitor Product</label>
    <nameField>
        <displayFormat>OCP-{0000000}</displayFormat>
        <label>Competitor Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>