force-app/main/default/objects/Opportunity_Competitor_Product__c/fields/Competitor2__c.field-meta.xml
<CustomField>
    <fullName>Competitor2__c</fullName>
    <formula>Competitor_Product__r.Competitor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor</label>
    <type>Text</type>
</CustomField>