force-app/main/default/objects/Opportunity_Competitor_Product__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Product</label>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Opportunity Competitor Products</relationshipLabel>
    <relationshipName>Opportunity_Competitor_Products</relationshipName>
    <type>Lookup</type>
</CustomField>