force-app/main/default/objects/Opportunity_Competitor_Product__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Products</relationshipLabel>
    <relationshipName>Competitor_Product_ID</relationshipName>
    <type>Lookup</type>
</CustomField>