force-app/main/default/objects/Opportunity_Competitor_Product__c/fields/Price_Spread__c.field-meta.xml
<CustomField>
    <fullName>Price_Spread__c</fullName>
    <label>Price Spread</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>