force-app/main/default/objects/Opportunity_Competitor_Product__c/fields/Price_Spread_Source__c.field-meta.xml
<CustomField>
    <fullName>Price_Spread_Source__c</fullName>
    <label>Price Spread Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal Estimate</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Retail/consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>